--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h1>Welcome to my repository!</h1>
-# Does this work
+
+<h2>About me</h2>
+My name is Felicia Schulz.
+I am currently studying a Master's degree in Bioinformatics at Lund University.
