--- a/index.html
+++ b/index.html
@@ -3,3 +3,7 @@
 <h2>About me</h2>
 My name is Felicia Schulz.
 I am currently studying a Master's degree in Bioinformatics at Lund University.
+
+<h2>About this repository<h2/>
+This is my first GitHub repository.
+Come back some time soon to see what projects I've been up to!
