--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ I am currently studying a Master's degree in Bioinformatics at Lund University.
 
 <h2>About this repository</h2>
 This is my first GitHub repository.
-Come back some time soon to see what projects I've been up to!
+Come back some time soon to see what projects I have been up to!
